src/main/resources/static/style.css
/*
 * The MIT License (MIT)
 *
 * Copyright (c) 2017-2019 Databases and Information Systems Research Group, University of Basel, Switzerland
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in all
 * copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 * SOFTWARE.
 */

html {
    margin: 0;
    padding: 0;
    height: 100%;
    font-family: sans-serif;
}

.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 55px; /* Set the fixed height of the footer here */
    line-height: 50px; /* Vertically center the text there */
    background-color: rgba(0, 0, 0, 0.28);
    left: 0;
}

.footer-table {
    width: 100%;
    font-weight: 900;
    table-layout: fixed;
}

#footer-left {
    text-align: left;
    padding: 0 15px;
    width: 25%;
}

#footer-middle {
    text-align: center;
    padding: 2px 0 0 0;
    width: 50%;
    font-weight: 400;
    line-height: 20px;
    size: 1em;
}

#footer-right {
    text-align: right;
    padding: 0 15px;
    width: 25%;
}


body {
    /* background-color: #A5D7D2; */
    background-color: #3B83C8;
    margin-bottom: 55px; /* Margin bottom by footer height */
}

.main {
    max-width: 1500px;
    margin-left: auto;
    margin-right: auto;
}

.dashboard {
    margin-left: 10%;
}

.circle {
    display: table-cell;
    vertical-align: middle;
    text-align: center;
    background-color: white;
    width: 150px;
    height: 150px;
    -moz-border-radius: 190px;
    -webkit-border-radius: 190px;
    border-radius: 190px;
    cursor: pointer;
    box-shadow: inset 0 0 0 0 rgba(200, 95, 66, 0.4), inset 0 0 0 16px rgba(255, 255, 255, 0.6), 0 1px 2px rgba(0, 0, 0, 0.1);
    transition: all 0.4s ease-in-out;
    margin-left: auto;
    margin-right: auto;
}

.heading {
    text-align: center;
    font-family: sans-serif;
    font-size: 500%;
    margin-bottom: 30px;
}

.content {
    margin-left: auto;
    margin-right: auto;
    background-color: white;
    width: 70%;
    height: 80%;
    text-align: center;
    padding: 15px;
    box-shadow: 5px 5px 3px gray;
}

.output {
    font-family: Consolas, Monaco, monospace;
    text-align: left;
    height: 340px;
    overflow: auto;
    border: solid black thin;
    margin: 0 15px 20px 15px;
    padding: 10px;
    white-space: pre;
    display: block;
}



.configuration-table {
    border-collapse: collapse;
    width: 100%;
    margin-bottom: 20px;
}

.configuration-table th, .configuration-table td {
    padding: 8px;
    text-align: left;
    border-bottom: 1px solid #ddd;
}

/*
.configuration-table tr:hover {
    background-color: #f5f5f5
}*/

.configuration-table select,
.configuration-table input {
    width: 98%;
    padding: 2%;
    font-size: 16px;
}


/* http://callmenick.com/post/stylish-css-buttons */
.btn-back {
    color: #fff;
    background-color: #346392;
    text-shadow: -1px 1px #27496d;
    border: none;
    font-size: 25px;
    width: 200px;
    height: 50px;
}

.btn-back:hover,
.btn-back.hover {
    background-color: #28486d;
    text-shadow: -1px 1px #193047;
}

.dropzone {
    margin-bottom: 15px;
}

/**
 * https://paulund.co.uk/how-to-style-a-checkbox-with-css
 */

/* Start by hiding the checkboxes */
input[type=checkbox] {
    visibility: hidden;
}

/* Create the slider bar */
.checkbox {
    width: 80px;
    height: 20px;
    background: #555;
    margin: 15px 2px;
    position: relative;
    border-radius: 6px;
}

/* Create the slider from the label */
.checkbox label {
    display: block;
    width: 32px;
    height: 32px;
    border-radius: 50%;
    transition: all .5s ease;
    cursor: pointer;
    position: absolute;
    top: -6px;
    left: -6px;
    background: #ccc;
}

/* Move the slider in the correct position if the checkbox is clicked */
.checkbox input[type=checkbox]:checked + label {
    left: 54px;
    background: #27cc1b;
}

